[package]
name = "alveograph-exporter"
version = "0.1.0"
authors = ["Nicholas Sixbury"]
rust-version = "1.80.1"
description = "This project is an application created for use at USDA-ARS Manhattan,KS to process output from the alveograph."
readme = "README.md"
repository = "https://github.com/nico6bury/usda-alveograph-exporter"
exclude = ["/target","/.vscode"]
edition = "2021"

[dependencies]
fltk = { version = "1.4.33", features = ["fltk-bundled"] }
time = { version = "0.3.36", features = ["macros", "formatting"] }
compile-time = "0.2.0"
